<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        style="@style/TextAppearance.Compat.Notification.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/notification_mood_title_margin_bottom"
        android:text="@string/daily_notification_title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_mood_very_happy"
            android:layout_width="@dimen/notification_mood_button_size"
            android:layout_height="@dimen/notification_mood_button_size"
            android:background="@drawable/ic_image_button_background"
            android:backgroundTint="@color/mood_very_happy"
            android:contentDescription="@string/mood_very_happy"
            android:src="@drawable/ic_mood_very_happy" />

        <ImageButton
            android:id="@+id/btn_mood_happy"
            android:layout_width="@dimen/notification_mood_button_size"
            android:layout_height="@dimen/notification_mood_button_size"
            android:layout_marginStart="@dimen/notification_mood_button_margin_horizontal"
            android:layout_marginEnd="@dimen/notification_mood_button_margin_horizontal"
            android:background="@drawable/ic_image_button_background"
            android:backgroundTint="@color/mood_happy"
            android:contentDescription="@string/mood_happy"
            android:src="@drawable/ic_mood_happy" />

        <ImageButton
            android:id="@+id/btn_mood_neutral"
            android:layout_width="@dimen/notification_mood_button_size"
            android:layout_height="@dimen/notification_mood_button_size"
            android:background="@drawable/ic_image_button_background"
            android:backgroundTint="@color/mood_neutral"
            android:contentDescription="@string/mood_neutral"
            android:src="@drawable/ic_mood_neutral" />

        <ImageButton
            android:id="@+id/btn_mood_unhappy"
            android:layout_width="@dimen/notification_mood_button_size"
            android:layout_height="@dimen/notification_mood_button_size"
            android:layout_marginStart="@dimen/notification_mood_button_margin_horizontal"
            android:layout_marginEnd="@dimen/notification_mood_button_margin_horizontal"
            android:background="@drawable/ic_image_button_background"
            android:backgroundTint="@color/mood_unhappy"
            android:contentDescription="@string/mood_unhappy"
            android:src="@drawable/ic_mood_unhappy" />

        <ImageButton
            android:id="@+id/btn_mood_very_unhappy"
            android:layout_width="@dimen/notification_mood_button_size"
            android:layout_height="@dimen/notification_mood_button_size"
            android:background="@drawable/ic_image_button_background"
            android:backgroundTint="@color/mood_very_unhappy"
            android:contentDescription="@string/mood_very_unhappy"
            android:src="@drawable/ic_mood_very_unhappy" />

    </LinearLayout>

</LinearLayout>
